# tsv2csv

./: .gitignore  .travis.yml  Makefile  README.md  install.sh  stack.yaml  tsv2csv.cabal
Data/: Tsv2csv.hs
exec/: Main.hs
src/: Main.hs  Tsv2csv.hs
test/: Test.hs
