name:                tsv2csv
version:             0.1.0.3
synopsis:            Convert tsv to csv
description:         Convert tab-delimited text to Excel-style comma-delimited
license:             AllRightsReserved
author:              Bob Grudem
maintainer:          dev@mackeycorp.com
-- copyright:           (c) 2019 Mackey LLC
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


library
  hs-source-dirs:     src
  exposed-modules:    Tsv2csv
  build-depends:      base < 5
                    , split
  default-language:   Haskell2010
  ghc-options:        -Wall
  
executable tsv2csv
  main-is:            Main.hs
  hs-source-dirs:     exec
  build-depends:      base < 5
                    , tsv2csv
  default-language:   Haskell2010

test-suite test 
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  build-depends:       base < 5
                     , HUnit
                     , tsv2csv
  default-language:    Haskell2010
